# scraper.rs

./: Cargo.toml  README.md
src/: main.rs  scraper.rs  store.rs  structs.rs  utils.rs
