[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.9"
tokio-retry = "0.3.0"
regex = "1.11.1"